--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             border: 2 px green;
             grid-column: 2 / 3; 
             grid-row: 2 / 3;
-            background-image: url(Xmas_tree.gif);
+            background-image: url(img/xmas_tree.gif);
             background-repeat: no-repeat;
         }
 
@@ -109,6 +109,28 @@
             grid-column: 4 / 5;
             grid-row: 8 / 9;
         }
+
+        li:nth-child(5) {
+            grid-column: 8 / 9;
+            grid-row: 10 / 11;
+        }
+
+        li:nth-child(6) {
+            grid-column: 3 / 4;
+            grid-row: 5 / 6;
+        }
+
+        li:nth-child(7) {
+            grid-column: 5 / 6;
+            grid-row: 11 / 12;
+        }
+
+        li:nth-child(8) {
+            grid-column: 6 / 7;
+            grid-row: 7 / 8;
+        }
+
+
     
     </style>
 </head>
@@ -125,13 +147,13 @@
             <li><button class="ball--gold"><a href="!#">6</a></button></li>
             <li><button class="ball--red"><a href="!#">7</a></button></li>
             <li><button class="ball--blue"><a href="!#">8</a></button></li>
-            <li><button class="ball--gold"><a href="!#">9</a></button></li>
+            <!--<li><button class="ball--gold"><a href="!#">9</a></button></li>
             <li><button class="ball--red"><a href="!#">10</a></button></li>
             <li><button class="ball--blue"><a href="!#">11</a></button></li>
             <li><button class="ball--gold"><a href="!#">12</a></button></li>
             <li><button class="ball--red"><a href="!#">13</a></button></li>
             <li><button class="ball--blue"><a href="!#">14</a></button></li>
-            <li><button class="ball--gold"><a href="!#">15</a></button></li>
+            <li><button class="ball--gold"><a href="!#">15</a></button></li>-->
         </ul>
         </div>
 
