--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <ul class="ornaments">
             <li><button class="ball--red"><a href="https://youtu.be/tuFu9-bfnQk">1</a></button></li>
             <li><button class="ball--blue"><a href="https://www.youtube.com/watch?v=EsqJmeqqZa0">2</a></button></li>
-            <li><button class="ball--gold"><a href="!#">3</a></button></li>
+            <li><button class="ball--gold"><a href="https://youtu.be/-ZggJNsAuIw">3</a></button></li>
             <li><button class="ball--red"><a href="!#">4</a></button></li>
             <li><button class="ball--blue"><a href="!#">5</a></button></li>
             <li><button class="ball--gold"><a href="!#">6</a></button></li>
