--- a/index.html
+++ b/index.html
@@ -139,14 +139,14 @@
 <h1>Christmas Party</h1>
         <div class="tree">
         <ul class="ornaments">
-            <li><button class="ball--red"><a href="https://youtu.be/tuFu9-bfnQk">1</a></button></li>
-            <li><button class="ball--blue"><a href="https://www.youtube.com/watch?v=EsqJmeqqZa0">2</a></button></li>
-            <li><button class="ball--gold"><a href="https://youtu.be/-ZggJNsAuIw">3</a></button></li>
+            <li><button class="ball--red"><a href="https://youtu.be/tuFu9-bfnQk" alt="parissnowball">1</a></button></li>
+            <li><button class="ball--blue"><a href="https://www.youtube.com/watch?v=EsqJmeqqZa0" alt="magoo">2</a></button></li>
+            <li><button class="ball--gold"><a href="https://www.youtube.com/watch?v=p1GUGAwc4fg" alt="sleighridebody">3</a></button></li>
             <li><button class="ball--red"><a href="!#">4</a></button></li>
-            <li><button class="ball--blue"><a href="!#">5</a></button></li>
+            <li><button class="ball--blue"><a href="https://youtu.be/ysIzPF3BfpQ" alt="muppets">5</a></button></li>
             <li><button class="ball--gold"><a href="!#">6</a></button></li>
             <li><button class="ball--red"><a href="!#">7</a></button></li>
-            <li><button class="ball--blue"><a href="!#">8</a></button></li>
+            <li><button class="ball--blue"><a href="https://www.youtube.com/watch?v=HcGsn7Aw2gI" alt="Tschaikovsky">8</a></button></li>
             <!--<li><button class="ball--gold"><a href="!#">9</a></button></li>
             <li><button class="ball--red"><a href="!#">10</a></button></li>
             <li><button class="ball--blue"><a href="!#">11</a></button></li>
