made holiday party

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         body {
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 1fr 4fr;
             grid-template-rows: 1fr 10fr;
         }
 
@@ -136,7 +136,7 @@
 </head>
 
 <body>
-<h1>Christmas Party</h1>
+<h1>Holiday Party</h1>
         <div class="tree">
         <ul class="ornaments">
             <li><button class="ball--red"><a href="https://youtu.be/tuFu9-bfnQk" alt="parissnowball">1</a></button></li>
