--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             display: grid;
             grid-template-columns: 1fr 4fr;
             grid-template-rows: 1fr 10fr;
+            background: navy;
+            color: white;
         }
 
         h1 {
