--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
             <li><button class="ball--gold"><a href="https://www.youtube.com/watch?fbclid=IwAR3MLSO5les92iVLaQ-tertlYkC4xSEbQ3tC8SBCxEtvLuPjfxukHq2kEoc&v=q11fRTFQ34I&feature=youtu.be" alt="lo_rose">6</a></button></li>
             <li><button class="ball--red"><a href="https://www.youtube.com/watch?v=1h2jmNU_6UI"alt="goats">7</a></button></li>
             <li><button class="ball--blue"><a href="https://www.youtube.com/watch?v=HcGsn7Aw2gI" alt="nutcracker">8</a></button></li>
-            <!--<li><button class="ball--gold"><a href="!#">9</a></button></li>
+            <li><button class="ball--gold"><a href="carol.html">9</a></button></li>
+            <!--
             <li><button class="ball--red"><a href="!#">10</a></button></li>
             <li><button class="ball--blue"><a href="!#">11</a></button></li>
             <li><button class="ball--gold"><a href="!#">12</a></button></li>
