added new xmas tree img

--- a/carol.html
+++ b/carol.html
@@ -10,14 +10,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
     <link href="../css/normalize.css" rel="stylesheet" />
-    <link href="style.css" rel="stylesheet" />
+    <link href="./css/style.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/a1e57ac401.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
-<h1>Q. Which Christmas Carol was arranged by Mozart?</h1>
-<h2><a href="https://www.youtube.com/watch?v=XdCp6se_b7s" alt="Mozart"></a>Answer</h2>
+<h2>Q. Which Christmas Carol was arranged by Mozart?</h2>
+<h3><a href="https://www.youtube.com/watch?v=XdCp6se_b7s" alt="Mozart">Answer</a></h3>
 
 </body>
 </html>
