Revert "don't like these changes"
This reverts commit 1d18a5512086cc5b41e4e6df0ee6d7b8aff51a7b.

--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
-    <!--<link href="./css/normalize.css" rel="stylesheet" />
-    <link href="./css/style.css" rel="stylesheet" />-->
+    <link href="./css/normalize.css" rel="stylesheet" />
+    <link href="./css/style.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/a1e57ac401.js" crossorigin="anonymous"></script>
- <style>
+ <!--  <style>
 
-        /**body {
+        body {
             display: grid;
             grid-template-columns: 1fr 4fr;
             grid-template-rows: 1fr 10fr;
-        }**/
-
+            background: navy;
+            color: white;
+        }
 
         h1 {
             grid-column: 1 / 2;
@@ -27,23 +28,13 @@
             text-align: center;
         }
 
-        /**.tree  
-            border: 2 px green;
-            grid-column: 2 / 3; 
-            grid-row: 2 / 3;
-            background-image: url(./img/xmas_tree.gif) no-repeat center;
-            -webkit-background-size: contain;
-            -moz-background-size: contain;
-            -o-background-size: contain;
-            background-size: contain;
-        **/
-
         .tree  {
             border: 2 px green;
             grid-column: 2 / 3; 
             grid-row: 2 / 3;
-            background-image: url(./img/xmas_tree.gif) no-repeat;
-}
+            background-image: url(img/xmas_tree.gif);
+            background-repeat: no-repeat;
+        }
 
         a {
             list-style-type: none;
@@ -75,9 +66,7 @@
             grid-template-columns: repeat(8, 50px);
             grid-template-rows: repeat(11, 50px);
             grid-row-gap: 10px;
-            background-image: url(img/xmas_tree.gif) no-repeat;
         }
-        
 
         .ornaments li {
             list-style-type: none;
@@ -143,17 +132,14 @@
             grid-row: 7 / 8;
         }
 
-        li:nth-child(9) {
-            grid-column: 3 / 4;
-            grid-row: 11 / 12;
-        }
 
-    </style>
+    
+    </style> -->
 </head>
 
-<div>
+<body>
 <h1>Holiday Party</h1>
-        <article class="tree">
+        <div class="tree">
         <ul class="ornaments">
             <li><button class="ball--red"><a href="https://youtu.be/tuFu9-bfnQk" alt="parissnowball">1</a></button></li>
             <li><button class="ball--blue"><a href="https://www.youtube.com/watch?v=EsqJmeqqZa0" alt="magoo">2</a></button></li>
@@ -172,8 +158,8 @@
             <li><button class="ball--blue"><a href="!#">14</a></button></li>
             <li><button class="ball--gold"><a href="!#">15</a></button></li>-->
         </ul>
-    </article>
-</div>
+        </div>
+
 </body>
 
 </html>
