--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
-    <link href="./css/normalize.css" rel="stylesheet" />
-    <link href="./css/style.css" rel="stylesheet" />
+    <link href="../css/normalize.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/a1e57ac401.js" crossorigin="anonymous"></script>
- <!--  <style>
+    <style>
 
         body {
             display: grid;
@@ -134,7 +134,7 @@
 
 
     
-    </style> -->
+    </style>
 </head>
 
 <body>
