--- a/index.html
+++ b/index.html
@@ -132,8 +132,11 @@
             grid-row: 7 / 8;
         }
 
-
-    
+        li:nth-child(9) {
+            grid-column: 3 / 4;
+            grid-row: 11 / 12;
+        }
+        
     </style>
 </head>
 
