--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset=utf-8>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -21,6 +20,7 @@
             background: navy;
             color: white;
         }
+
 
         h1 {
             grid-column: 1 / 2;
@@ -136,23 +136,25 @@
             grid-column: 3 / 4;
             grid-row: 11 / 12;
         }
-        
+
     </style>
 </head>
 
 <body>
-<h1>Holiday Party</h1>
+
+
+    <h1>Merry Christmas ! </h1>
         <div class="tree">
         <ul class="ornaments">
-            <li><button class="ball--red"><a href="https://youtu.be/tuFu9-bfnQk" alt="parissnowball">1</a></button></li>
-            <li><button class="ball--blue"><a href="https://www.youtube.com/watch?v=EsqJmeqqZa0" alt="magoo">2</a></button></li>
-            <li><button class="ball--gold"><a href="https://www.youtube.com/watch?v=p1GUGAwc4fg" alt="sleighridebody">3</a></button></li>
-            <li><button class="ball--red"><a href="!#">4</a></button></li>
-            <li><button class="ball--blue"><a href="https://youtu.be/ysIzPF3BfpQ" alt="muppets">5</a></button></li>
-            <li><button class="ball--gold"><a href="https://www.youtube.com/watch?fbclid=IwAR3MLSO5les92iVLaQ-tertlYkC4xSEbQ3tC8SBCxEtvLuPjfxukHq2kEoc&v=q11fRTFQ34I&feature=youtu.be" alt="lo_rose">6</a></button></li>
-            <li><button class="ball--red"><a href="https://www.youtube.com/watch?v=1h2jmNU_6UI"alt="goats">7</a></button></li>
-            <li><button class="ball--blue"><a href="https://www.youtube.com/watch?v=HcGsn7Aw2gI" alt="nutcracker">8</a></button></li>
-            <li><button class="ball--gold"><a href="carol.html">9</a></button></li>
+            <li><a class="ball--red" href="https://youtu.be/tuFu9-bfnQk" >1</a></li><!--alt="parissnowball"-->
+            <li><a class="ball--blue" href="https://www.youtube.com/watch?v=EsqJmeqqZa0" >2</a></li><!--alt="magoo"-->
+            <li><a class="ball--gold" href="https://www.youtube.com/watch?v=p1GUGAwc4fg" >3</a></li><!--alt="sleighridebody"-->
+            <li><a class="ball--red" href="!#">4</a></li>
+            <li><a class="ball--blue" href="https://youtu.be/ysIzPF3BfpQ" >5</a></li><!--alt="muppets"-->
+            <li><a class="ball--gold" href="https://www.youtube.com/watch?fbclid=IwAR3MLSO5les92iVLaQ-tertlYkC4xSEbQ3tC8SBCxEtvLuPjfxukHq2kEoc&v=q11fRTFQ34I&feature=youtu.be" >6</a></li><!--alt="lo_rose"-->
+            <li><a class="ball--red" href="https://www.youtube.com/watch?v=1h2jmNU_6UI" >7</a></li><!--alt="goats"-->
+            <li><a class="ball--blue"><a href="https://www.youtube.com/watch?v=HcGsn7Aw2gI" >8</a></a></li><!--alt="nutcracker"-->
+            <li><a class="ball--gold"><a href="carol.html">9</a></a></li>
             <!--
             <li><button class="ball--red"><a href="!#">10</a></button></li>
             <li><button class="ball--blue"><a href="!#">11</a></button></li>
