--- a/index.html
+++ b/index.html
@@ -153,10 +153,11 @@
             <li><a class="ball--blue" href="https://youtu.be/ysIzPF3BfpQ" >5</a></li><!--alt="muppets"-->
             <li><a class="ball--gold" href="https://www.youtube.com/watch?fbclid=IwAR3MLSO5les92iVLaQ-tertlYkC4xSEbQ3tC8SBCxEtvLuPjfxukHq2kEoc&v=q11fRTFQ34I&feature=youtu.be" >6</a></li><!--alt="lo_rose"-->
             <li><a class="ball--red" href="https://www.youtube.com/watch?v=1h2jmNU_6UI" >7</a></li><!--alt="goats"-->
-            <li><a class="ball--blue"><a href="https://www.youtube.com/watch?v=HcGsn7Aw2gI" >8</a></a></li><!--alt="nutcracker"-->
-            <li><a class="ball--gold"><a href="carol.html">9</a></a></li>
+            <li><a class="ball--blue"><a href="https://www.youtube.com/watch?v=HcGsn7Aw2gI" >8</a></li><!--alt="nutcracker"-->
+            <li><a class="ball--gold"><a href="carol.html">9</a></li>
+            
+            <li><a class="ball--red" href="decoratetree.html">10</a></li>
             <!--
-            <li><button class="ball--red"><a href="!#">10</a></button></li>
             <li><button class="ball--blue"><a href="!#">11</a></button></li>
             <li><button class="ball--gold"><a href="!#">12</a></button></li>
             <li><button class="ball--red"><a href="!#">13</a></button></li>
