--- a/decoratetree.html
+++ b/decoratetree.html
@@ -160,7 +160,7 @@ canvas{
 </div>
 <!--trunk color-->
 <div class="send">
-<button type="submit" class="proceed-btn"><a href="#">Send custom tree</a>
+<button type="submit" class="proceed-btn"><a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=target@email.com">Send custom tree</a>
 </button>
 </div>
 </div>
