--- a/partylights.html
+++ b/partylights.html
@@ -4,15 +4,14 @@
 <head>
     <meta charset=utf-8>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>party_lights</title>
+    <title>partylights</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
     <link href="../css/normalize.css" rel="stylesheet" />
-    <link href="style.css" rel="stylesheet" />
-    <script src="https://kit.fontawesome.com/a1e57ac401.js" crossorigin="anonymous"></script>
-    
+
+
     <style>
 $globe-width:   12px;
 $globe-height:  28px;
