--- a/index.html
+++ b/index.html
@@ -156,8 +156,7 @@
             <li><a class="ball--blue" href="https://www.youtube.com/watch?v=HcGsn7Aw2gI" >8</a></li><!--alt="nutcracker"-->
             <li><a class="ball--gold" href="carol.html">9</a></li>
             <li><a class="ball--red" href="decoratetree.html">10</a></li>
-            <!--
-            <li><button class="ball--blue"><a href="!#">11</a></button></li>
+            <li><a class="ball--blue" href="partylights.html">11</a></li> <!--
             <li><button class="ball--gold"><a href="!#">12</a></button></li>
             <li><button class="ball--red"><a href="!#">13</a></button></li>
             <li><button class="ball--blue"><a href="!#">14</a></button></li>
