--- a/partylights.html
+++ b/partylights.html
@@ -12,7 +12,7 @@
     <link href="../css/normalize.css" rel="stylesheet" />
 
 
-    <style>
+<style>
 $globe-width:   12px;
 $globe-height:  28px;
 $globe-spacing: 40px;
@@ -113,7 +113,8 @@ box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread rgba(247,0,148,1);}
 50% { background: rgba(247,0,148,$light-off-opacity);
 box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread rgba(247,0,148,0.2);}
 }
-        </style>
+</style>
+</head>
 
 <body>
 <ul class="lightrope">
