--- a/santamozart.html
+++ b/santamozart.html
@@ -209,7 +209,8 @@ box-sizing: border-box;
 
     </div>
     <div class="beard">
-        <h2>Tell us about a holiday tradition you cherish.</h2>
+        <h2>Q. Which carol containing a nonsense word in its refrain was arranged by Mozart?</h2>
+        <p><a href="!#">Answer</a></p>
       <div class="mustache">
         <div class="mustache-left">
 
