--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             display: grid;
             grid-template-columns: 1fr 4fr;
             grid-template-rows: 1fr 10fr;
-            background: navy;
+            background: midnightblue;
             color: white;
         }
 
@@ -112,7 +112,7 @@
             grid-row: 8 / 9;
         }
 
-        li:nth-child(5) {
+        li:nth-child(15) {
             grid-column: 8 / 9;
             grid-row: 10 / 11;
         }
@@ -124,7 +124,7 @@
 
         li:nth-child(7) {
             grid-column: 5 / 6;
-            grid-row: 11 / 12;
+            grid-row: 10 / 11;
         }
 
         li:nth-child(8) {
@@ -135,6 +135,36 @@
         li:nth-child(9) {
             grid-column: 3 / 4;
             grid-row: 11 / 12;
+        }
+
+        li:nth-child(10) {
+            grid-column: 1 / 2;
+            grid-row: 10 / 11;
+        }
+
+        li:nth-child(11) {
+            grid-column: 5 / 6;
+            grid-row: 5 / 6;
+        }
+
+        li:nth-child(12) {
+            grid-column: 7 / 8;
+            grid-row: 8 / 9;
+        }
+
+        li:nth-child(13) {
+            grid-column: 2 / 3;
+            grid-row: 7 / 8;
+        }
+
+        li:nth-child(14) {
+            grid-column: 7 / 8;
+            grid-row: 11 / 12;
+        }
+
+        li:nth-child(5) {
+            grid-column: 4 / 5;
+            grid-row: 3 / 4;
         }
 
     </style>
@@ -156,11 +186,11 @@
             <li><a class="ball--blue" href="https://www.youtube.com/watch?v=HcGsn7Aw2gI" >8</a></li><!--alt="nutcracker"-->
             <li><a class="ball--gold" href="carol.html">9</a></li>
             <li><a class="ball--red" href="decoratetree.html">10</a></li>
-            <li><a class="ball--blue" href="partylights.html">11</a></li> <!--
-            <li><button class="ball--gold"><a href="!#">12</a></button></li>
-            <li><button class="ball--red"><a href="!#">13</a></button></li>
-            <li><button class="ball--blue"><a href="!#">14</a></button></li>
-            <li><button class="ball--gold"><a href="!#">15</a></button></li>-->
+            <li><a class="ball--blue" href="flyingsanta.html">11</a></li> 
+            <li><a class="ball--gold" href="santatradition.html">12</a></li>
+            <li><a class="ball--red" href="sunrisesunset.html">13</a></li>
+            <li><a class="ball--blue" href="flyingcrazy.html">14</a></li>
+            <li><a class="ball--gold" href="partylights.html">15</a></li>
         </ul>
         </div>
 
