--- a/decoratetree.html
+++ b/decoratetree.html
@@ -138,6 +138,7 @@ canvas{
 <option value="red">red</option>
 <option value="blue">blue</option>
 <option value="green">green</option>
+<option value="yellow">yellow</option>
 </select>
 </div>
 <!--star color-->
@@ -153,9 +154,9 @@ canvas{
 <p> change the color of the trunk</p>
 <div class="trunk-color">
 <select id="trunk">
-<option value="red">red</option>
-<option value="blue">blue</option>
 <option value="green">green</option>
+<option value="brown">brown</option>
+<option value="black">black</option>
 </select>
 </div>
 <!--trunk color-->
