open in new tabs

--- a/flyingsong.html
+++ b/flyingsong.html
@@ -185,7 +185,7 @@ a{
   </svg>		
 </div><!--end codepen-->
 <div class="writing">
-<h1>What’s the craziest thing that ever happened to you?</h1>
+<h1>What is your favorite holiday song?</h1>
 </div>
 </body>
 </html>
