--- a/sunrisesunset.html
+++ b/sunrisesunset.html
@@ -373,7 +373,7 @@ $snow: 3000;
 
 h2 {
     text-align: center;
-    padding-top: 20px;
+    padding-top: 30px;
 }
 </style>
 </head>
@@ -400,7 +400,7 @@ h2 {
       <div class="star">·</div>
     </div>
     <div class="sun">
-        <p>Who sings<br>"Let It Go" in <i>Frozen</i>... and what is IT?</p>
+        <h2>Tell us about a beautiful place you've visited.</h2>
     </div>
     <!-- floor -->
     <div class="floor-bottom">
