more ornament updates

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             grid-column: 1 / 2;
             grid-row: 1 / 2;
             text-align: center;
+            padding: 50px;
         }
 
         .tree  {
@@ -173,24 +174,24 @@
 <body>
 
 
-    <h1>Merry Christmas ! </h1>
+    <h1>Merry Christmas!</h1>
         <div class="tree">
         <ul class="ornaments">
             <li><a class="ball--red" href="https://youtu.be/tuFu9-bfnQk" target="_blank">1</a></li><!--alt="parissnowball"-->
             <li><a class="ball--blue" href="https://www.youtube.com/watch?v=EsqJmeqqZa0" target="_blank">2</a></li><!--alt="magoo"-->
             <li><a class="ball--gold" href="https://www.youtube.com/watch?v=p1GUGAwc4fg" target="_blank">3</a></li><!--alt="sleighridebody"-->
-            <li><a class="ball--red" href="!#" target="_blank">4</a></li>
+            <li><a class="ball--red" href="santafrozen.html" target="_blank">4</a></li>
             <li><a class="ball--blue" href="https://youtu.be/ysIzPF3BfpQ" target="_blank">5</a></li><!--alt="muppets"-->
             <li><a class="ball--gold" href="https://www.youtube.com/watch?fbclid=IwAR3MLSO5les92iVLaQ-tertlYkC4xSEbQ3tC8SBCxEtvLuPjfxukHq2kEoc&v=q11fRTFQ34I&feature=youtu.be" target="_blank">6</a></li><!--alt="lo_rose"-->
             <li><a class="ball--red" href="https://www.youtube.com/watch?v=1h2jmNU_6UI" target="_blank">7</a></li><!--alt="goats"-->
-            <li><a class="ball--blue" href="https://www.youtube.com/watch?v=HcGsn7Aw2gI" target="_blank">8</a></li><!--alt="nutcracker"-->
-            <li><a class="ball--gold" href="carol.html" target="_blank">9</a></li>
+            <li><a class="ball--blue" href="flyingsong.html" target="_blank">8</a></li><!--alt="nutcracker"-->
+            <li><a class="ball--gold" href="santamozart.html" target="_blank">9</a></li>
             <li><a class="ball--red" href="decoratetree.html" target="_blank">10</a></li>
             <li><a class="ball--blue" href="flyingsanta.html" target="_blank">11</a></li> 
             <li><a class="ball--gold" href="santatradition.html" target="_blank">12</a></li>
             <li><a class="ball--red" href="sunrisesunset.html" target="_blank">13</a></li>
             <li><a class="ball--blue" href="flyingcrazy.html" target="_blank">14</a></li>
-            <li><a class="ball--gold" href="partylights.html" target="_blank">15</a></li>
+            <!--<li><a class="ball--gold" href="partylights.html" target="_blank">15</a></li>-->
         </ul>
         </div>
 
