added solstice photo

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="tree">
         <ul class="ornaments">
             <li><a class="ball--red" href="https://youtu.be/tuFu9-bfnQk" target="_blank">1</a></li><!--alt="parissnowball"-->
-            <li><a class="ball--blue" href="https://www.youtube.com/watch?v=EsqJmeqqZa0" target="_blank">2</a></li><!--alt="magoo"-->
+            <li><a class="ball--blue" href="solstice.jpg" target="_blank">2</a></li><!--alt="magoo"-->
             <li><a class="ball--gold" href="https://www.youtube.com/watch?v=p1GUGAwc4fg" target="_blank">3</a></li><!--alt="sleighridebody"-->
             <li><a class="ball--red" href="santafrozen.html" target="_blank">4</a></li>
             <li><a class="ball--blue" href="https://youtu.be/ysIzPF3BfpQ" target="_blank">5</a></li><!--alt="muppets"-->
@@ -187,7 +187,7 @@
             <li><a class="ball--blue" href="flyingsong.html" target="_blank">8</a></li><!--alt="nutcracker"-->
             <li><a class="ball--gold" href="santamozart.html" target="_blank">9</a></li>
             <li><a class="ball--red" href="decoratetree.html" target="_blank">10</a></li>
-            <li><a class="ball--blue" href="flyingsanta.html" target="_blank">11</a></li> 
+            <li><a class="ball--blue" href="flyingsong.html" target="_blank">11</a></li> 
             <li><a class="ball--gold" href="santatradition.html" target="_blank">12</a></li>
             <li><a class="ball--red" href="sunrisesunset.html" target="_blank">13</a></li>
             <li><a class="ball--blue" href="flyingcrazy.html" target="_blank">14</a></li>
