--- a/flyingcrazy.html
+++ b/flyingcrazy.html
@@ -185,7 +185,7 @@ a{
   </svg>		
 </div><!--end codepen-->
 <div class="writing">
-<h1>What’s the craziest thing that ever happened to you?</h1>
+<h1>Tell us a funny holiday memory.</h1>
 </div>
 </body>
 </html>
