--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="tree">
         <ul class="ornaments">
             <li><a class="ball--red" href="https://youtu.be/tuFu9-bfnQk" target="_blank">1</a></li><!--parissnowball"-->
-            <li><a class="ball--blue" href="/img/solstice.jpg" target="_blank">2</a></li><!--solstice"-->
+            <li><a class="ball--blue" href="img/solstice.jpg" target="_blank">2</a></li><!--solstice"-->
             <li><a class="ball--gold" href="scrooge.html" target="_blank">3</a></li>
             <li><a class="ball--red" href="santafrozen.html" target="_blank">4</a></li><!--frozen-->
             <li><a class="ball--blue" href="https://youtu.be/ysIzPF3BfpQ" target="_blank">5</a></li><!--alt="muppets"-->
