--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@
             <li><a class="ball--blue" href="flyingsong.html" target="_blank">8</a></li><!--alt="favoritesong"-->
             <li><a class="ball--gold" href="santamozart.html" target="_blank">9</a></li><!--deckthehalls-->
             <li><a class="ball--red" href="decoratetree.html" target="_blank">10</a></li>
-            <li><a class="ball--blue" href="img/wh_xmas_tree.gif" target="_blank">11</a></li> 
+            <li><a class="ball--blue" href="img/wolvesfire.jpg" target="_blank">11</a></li> 
             <li><a class="ball--gold" href="santatradition.html" target="_blank">12</a></li>
             <li><a class="ball--red" href="sunrisesunset.html" target="_blank">13</a></li>
             <li><a class="ball--blue" href="flyingcrazy.html" target="_blank">14</a></li>
-            <!--<li><a class="ball--gold" href="partylights.html" target="_blank">15</a></li>-->
+            <!--<li><a class="ball--gold" href="img/wolvesfire.jpg" target="_blank">15</a></li>-->
         </ul>
         </div>
 
