--- a/holidayplay.html
+++ b/holidayplay.html
@@ -209,7 +209,7 @@ box-sizing: border-box;
 
     </div>
     <div class="beard">
-        <h2>Tell us about a favorite holiday food.</h2>
+        <h2>Which family members have perfomed in a Christmas pageant, musical, or play? Ask for help!</h2>
       <div class="mustache">
         <div class="mustache-left">
 
