--- a/index.html
+++ b/index.html
@@ -188,10 +188,11 @@
             <li><a class="ball--gold" href="santamozart.html" target="_blank">9</a></li><!--deckthehalls-->
             <li><a class="ball--red" href="decoratetree.html" target="_blank">10</a></li>
             <li><a class="ball--blue" href="img/wolvesfire.jpg" target="_blank">11</a></li> 
-            <li><a class="ball--gold" href="santatradition.html" target="_blank">12</a></li>
+            <li><a class="ball--gold" href="12xmas.html" target="_blank">12</a></li>
             <li><a class="ball--red" href="sunrisesunset.html" target="_blank">13</a></li>
-            <li><a class="ball--blue" href="flyingcrazy.html" target="_blank">14</a></li>
-            <!--<li><a class="ball--gold" href="img/wolvesfire.jpg" target="_blank">15</a></li>-->
+            <li><a class="ball--blue" href="stnick.html" target="_blank">14</a></li>
+            <li><a class="ball--gold" href="holidayplay.html" target="_blank">15</a></li>
+            <li><a class="ball--gold" href="/img/charliebrown.jpg" target="_blank">16</a></li>
         </ul>
         </div>
 
