--- a/santamozart.html
+++ b/santamozart.html
@@ -209,7 +209,7 @@ box-sizing: border-box;
 
     </div>
     <div class="beard">
-        <h2>Q. Which carol featuring the Halls was arranged by Mozart?</h2>
+        <h2>Q. Which carol featuring the Halls was arranged by Mozart? Hum or sing the chorus!</h2>
         <p><a href="https://www.youtube.com/watch?v=XdCp6se_b7s">Answer</a></p>
       <div class="mustache">
         <div class="mustache-left">
