--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         }
 
         li:nth-child(4) {
-            grid-column: 4 / 5;
+            grid-column: 7 / 8;
             grid-row: 8 / 9;
         }
 
@@ -149,7 +149,7 @@
         }
 
         li:nth-child(12) {
-            grid-column: 7 / 8;
+            grid-column: 4 / 5;
             grid-row: 8 / 9;
         }
 
@@ -166,6 +166,11 @@
         li:nth-child(5) {
             grid-column: 4 / 5;
             grid-row: 3 / 4;
+        }
+
+        li:nth-child(16) {
+            grid-column: 7 / 8;
+            grid-row: 6 / 7;
         }
 
     </style>
