--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <li><a class="ball--red" href="sunrisesunset.html" target="_blank">13</a></li>
             <li><a class="ball--blue" href="stnick.html" target="_blank">14</a></li>
             <li><a class="ball--gold" href="holidayplay.html" target="_blank">15</a></li>
-            <li><a class="ball--gold" href="/img/charliebrown.jpg" target="_blank">16</a></li>
+            <li><a class="ball--gold" href="img/charliebrown.jpg" target="_blank">16</a></li>
         </ul>
         </div>
 
