--- a/santamozart.html
+++ b/santamozart.html
@@ -51,11 +51,11 @@ h2 {
 }
 
 a {
-    color: #d00000;
+    color: white;
     font-size: x-large;
     text-align: center;
     text-decoration: none;
-    padding-left: 50px;
+    padding-left: 150px;
 }
 
 .wrapper {
