--- a/carol.html
+++ b/carol.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset=utf-8>
+  <head>
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Christmas Carol</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&display=swap"
-        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
     <link href="../css/normalize.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
-    <script src="https://kit.fontawesome.com/a1e57ac401.js" crossorigin="anonymous"></script>
-</head>
+    <script
+      src="https://kit.fontawesome.com/a1e57ac401.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<body>
-
-<h1>Q. Which Christmas Carol was arranged by Mozart?</h1>
-<h2><a href="https://www.youtube.com/watch?v=XdCp6se_b7s" alt="Mozart"></a>Answer</h2>
-
-</body>
+  <body>
+    <h1>Q. Which Christmas Carol was arranged by Mozart?</h1>
+    <h2>
+      <a href="https://www.youtube.com/watch?v=XdCp6se_b7s" alt="Mozart"></a
+      >Answer
+    </h2>
+  </body>
 </html>
