--- a/decoratetree.html
+++ b/decoratetree.html
@@ -1,3 +1,5 @@
+<!-- interactive christmas tree design by merlijn on Codepen at https://codepen.io/merlijn34/pen/ZOKRBZ -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
