--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Many thanks to the many artists on Codepen who made these designs possible! I couldn't have done it without them :-) -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
